--- a/.github/workflows/ephemeral-environments-provision.yaml
+++ b/.github/workflows/ephemeral-environments-provision.yaml
@@ -15,6 +15,18 @@ jobs:
     #runs-on: ubuntu-latest
     runs-on: self-hosted
     steps:
+      - uses: actions/checkout@v3
+        with:
+          fetch-depth: 0
+      - name: Copy Kustomize Overlays
+        run: |
+          mkdir -p kustomize/envs/ephemeral-environment-pr-${{ github.event.pull_request.number }}
+          cp .github/kustomize/overlays/MyNewFeature/* kustomize/envs/ephemeral-environment-pr-${{ github.event.pull_request.number }}/
+      - name: Commit Kustomize Overlays
+        uses: EndBug/add-and-commit@v9
+        with:
+          add: 'kustomize/envs/ephemeral-environment-pr-${{ github.event.pull_request.number }}/*'
+          message: 'Add Kustomize overlays for ephemeral environment PR #${{ github.event.pull_request.number }}'
       - name: Create Ephemeral Environment
         id: create_ephemeral_environment
         uses: OctopusDeploy/create-ephemeral-environment@v1.0.0
