--- a/.github/workflows/ephemeral-environments-provision.yaml
+++ b/.github/workflows/ephemeral-environments-provision.yaml
@@ -27,6 +27,7 @@ jobs:
         with:
           add: 'kustomize/envs/ephemeral-environment-pr-${{ github.event.pull_request.number }}/*'
           message: 'Add Kustomize overlays for ephemeral environment PR #${{ github.event.pull_request.number }}'
+          new_branch: 'MyNewFeature'
       - name: Create Ephemeral Environment
         id: create_ephemeral_environment
         uses: OctopusDeploy/create-ephemeral-environment@v1.0.0
