Adding a wait so commit is complete

--- a/.github/workflows/ephemeral-environments-provision.yaml
+++ b/.github/workflows/ephemeral-environments-provision.yaml
@@ -28,6 +28,8 @@ jobs:
           add: 'kustomize/envs/ephemeral-environment-pr-${{ github.event.pull_request.number }}/*'
           message: 'Add Kustomize overlays for ephemeral environment PR #${{ github.event.pull_request.number }}'
           new_branch: 'MyNewFeature'
+      - name: Wait for commit to be pushed
+        run: sleep 10
       - name: Create Ephemeral Environment
         id: create_ephemeral_environment
         uses: OctopusDeploy/create-ephemeral-environment@v1.0.0
