--- a/.github/workflows/octopub-frontend.yaml
+++ b/.github/workflows/octopub-frontend.yaml
@@ -4,9 +4,9 @@ permissions:
   packages: write
 on:
   workflow_dispatch:
-  # push:
-  #   branches:
-  #     - main
+  push:
+    branches:
+      - main
 
 jobs:
   build:
